ui grid completed

--- a/app/student-list/student-list.css
+++ b/app/student-list/student-list.css
@@ -1,24 +1,18 @@
-.hero {
-  margin-top: 5rem;
-}
-h1 {
-  color: #f6f1ee;
-  margin-bottom: 20px;
-}
-table {
-  border-spacing: 20px;
-  background-color: #f6f1ee;
-  border-radius: 10px;
-}
-th,
-td {
-  padding: 20px;
+.table {
+  margin-top: 100px;
 }
 
-.uiGrid {
-  margin-top: 20%;
-  width: 500px;
-  height: 250px;
+h2 {
+  color: #f6f1ee;
+  letter-spacing: 4px;
+}
+
+.myGrid {
+  margin-top: 10px;
+  width: 700px;
+  height: max-content;
   color: black;
-  background-color: #fff;
+  background-color: #f6f1ee;
+  padding: 20px;
+  border-radius: 10px;
 }
